<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/transport_root"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_bar"
        layout="@layout/action_bar" />


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/online_ll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical"
            android:padding="10dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/transport"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/transport"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"

                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/road"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/road" />

                <RadioButton
                    android:id="@+id/rail"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/rail" />

                <RadioButton
                    android:id="@+id/air"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/air" />
            </RadioGroup>

            <RadioGroup
                android:id="@+id/charter_or_regular"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/charter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/chartered" />

                <RadioButton
                    android:id="@+id/regular"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"

                    android:text="@string/regular" />
            </RadioGroup>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/from_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <!--<TextView-->
                <!--android:id="@+id/textView3"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.5"-->
                <!--android:text="@string/from"-->
                <!--android:textColor="@color/primary_text" />-->

                <AutoCompleteTextView
                    android:id="@+id/from"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/textview_background"
                    android:hint="@string/from"
                    android:padding="2dp" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/to_input"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp">

                <!--<TextView-->
                <!--android:id="@+id/text_to"-->
                <!--android:layout_width="0dp"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_weight="0.5"-->
                <!--android:text="@string/to"-->
                <!--android:textColor="@color/primary_text" />-->

                <AutoCompleteTextView
                    android:id="@+id/to"
                    android:layout_width="match_parent"
                    android:layout_height="36dp"
                    android:layout_margin="10dp"
                    android:background="@drawable/textview_background"
                    android:hint="@string/to"
                    android:padding="2dp" />


            </android.support.design.widget.TextInputLayout>


            <Button
                android:id="@+id/next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/custom_bg"
                android:onClick="nextButtonClick"
                android:shadowColor="@color/secondary_text"
                android:shadowRadius="2"
                android:text="@string/next"
                android:textColor="@color/icons" />

        </LinearLayout>
    </ScrollView>

    <LinearLayout
        android:id="@+id/offline_ll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:orientation="vertical"
        android:weightSum="1">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:gravity="center"
            android:text="@string/error"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:onClick="getPhoneNumberExample"
            android:id="@+id/reload"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg"
            android:gravity="center"
            android:shadowColor="@color/secondary_text"
            android:text="@string/refresh"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/dial1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg"
            android:onClick="dialUs"
            android:shadowColor="@color/secondary_text"
            android:text="@string/dial"
            android:textColor="@color/icons" />

        <Button
            android:id="@+id/dial2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@drawable/custom_bg"
            android:onClick="dialUs"
            android:shadowColor="@color/secondary_text"
            android:text="@string/dial"
            android:textColor="@color/icons" />
    </LinearLayout>
</LinearLayout>