<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:focusableInTouchMode="true"
    android:orientation="vertical">

    <include xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/app_bar"
        layout="@layout/action_bar" />

    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context="appers.com.autocompleteexample.DiagnosisActivity">


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/patientDiagonosis"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/patient_diagnosis"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_background"
                android:inputType="textCapCharacters"
                android:isScrollContainer="true"
                android:maxLines="10"
                android:padding="10dp" />

            <TextView
                android:id="@+id/present"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/presentState"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/present_state"
                android:layout_width="match_parent"
                android:layout_height="96dp"
                android:layout_margin="10dp"
                android:background="@drawable/textview_background"
                android:inputType="textCapCharacters"
                android:padding="10dp" />


            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/ventilator_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/ventilator_yes" />

                <RadioButton
                    android:id="@+id/ventilator_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/ventilator_no" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/medication"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <RadioGroup
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/medication_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/medication_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/no" />
            </RadioGroup>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:padding="10dp"
                android:text="@string/doctor"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textColor="@color/primary_text"
                android:textStyle="bold" />

            <RadioGroup
                android:id="@+id/doctor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <RadioButton
                    android:id="@+id/doctor_yes"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/yes" />

                <RadioButton
                    android:id="@+id/doctor_no"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:padding="10dp"
                    android:text="@string/no" />
            </RadioGroup>


            <Button
                android:id="@+id/next_to_contact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end"
                android:layout_margin="10dp"
                android:background="@drawable/custom_bg"
                android:padding="10dp"
                android:text="@string/next"
                android:textColor="@color/icons" />

        </LinearLayout>
    </ScrollView>
</LinearLayout>